--- a/plugins/rest/plugin.spec.yaml
+++ b/plugins/rest/plugin.spec.yaml
@@ -4,7 +4,7 @@ products: [insightconnect]
 name: rest
 title: HTTP Requests
 description: The HTTP Requests plugin to make it easy to integrate with RESTful services
-version: 6.0.1
+version: 6.0.2
 vendor: rapid7
 support: community
 supported_versions: ["2022-09-05"]
@@ -13,6 +13,9 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/rest
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
   docs_url: https://docs.rapid7.com/insightconnect/http-requests
+key_features: ["Make RESTful API calls"]
+requirements: ["None"]
+references: ["https://requests.readthedocs.io/en/latest/", "https://docs.rapid7.com/insightconnect/http-requests"]
 tags:
 - rest
 - request
@@ -25,6 +28,10 @@ hub_tags:
   keywords: [rest, request, http, rpc, microservices, api]
   features: []
 enable_cache: true
+sdk:
+  type: full
+  version: 5
+  user: root
 connection:
   base_url:
     title: Base URL
